[project]
name = "ghostshell-license-server"
version = "0.1.0"
description = "License server built with FastAPI and PostgreSQL"
requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi>=0.117.1,<0.118.0",
    "psycopg2-binary>=2.9.10,<2.10.0",
    "pydantic>=2.11.9,<2.12.0",
    "pyjwt>=2.10.1,<2.11.0",
    "python-dotenv>=1.1.1,<1.2.0",
    "python-jose[cryptography]>=3.5.0,<3.6.0",
    "python-multipart>=0.0.20,<0.1.0",
    "sqlalchemy>=2.0.43,<2.1.0",
    "uvicorn[standard]>=0.36.0,<0.37.0",
    "h11>=0.14.0,<0.15.0"
]
